# rvcc

./: .clang-format  CMakeLists.txt  readme
script/: exec.sh
src/: codegen.c  main.c  parse.c  rvcc.h  tokenize.c  type.c
test/: CMakeLists.txt  run_tests.sh
